# universal-llm-integration

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: app.py
apps/chats/: chat_interfaces.py  chat_registry.py
apps/core/: factory.py
apps/llm/: llm_providers.py  llm_registry.py  query_engines.py  settings.py
