[project]
name = "RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.8",
    "langchain-community>=0.3.8",
    "langchain-huggingface>=0.1.2",
    "langgraph>=0.2.53",
    "llama-index-tools-duckduckgo>=0.3.0",
    "llama-index>=0.12.15",
    "llama-index-core>=0.12.10.post1",
    "llama-index-embeddings-huggingface>=0.5.0",
    "llama-index-llms-huggingface-api>=0.3.1",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-node-parser-docling>=0.3.0",
    "llama-index-readers-docling>=0.3.0",
    "llama-index-readers-file>=0.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.6.1",
    "pydantic[standard]>=2.10.1",
    "requests>=2.32.3",
    "streamlit>=1.40.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "xlrd>=2.0.1",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-huggingface>=0.4.2",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]
